# tiny3d

./: CMakeLists.txt  README.md
CMake/: Common.cmake  Info.plist.in
Libs/: CMakeLists.txt
Libs/Assimp/: CMakeLists.txt
Libs/Assimp/code/: B3DImporter.cpp  BlenderModifier.cpp  FBXDocument.cpp  FBXMeshGeometry.cpp  IFCLoader.cpp  LWOAnimation.cpp  OgreParsingUtils.h  STEPFileReader.cpp
Libs/Assimp/include/assimp/: types.h
Libs/BZip2/: CMakeLists.txt
Libs/GLM/: CMakeLists.txt
Libs/GLSlang/: CMakeLists.txt
Libs/GLSlang/OGLCompilersDLL/: CMakeLists.txt
Libs/GLSlang/SPIRV/: CMakeLists.txt
Libs/GLSlang/glslang/: CMakeLists.txt
Libs/GLSlang/glslang/OSDependent/Unix/: CMakeLists.txt
Libs/GLSlang/glslang/OSDependent/Windows/: CMakeLists.txt
Libs/MiniZip/: CMakeLists.txt
Libs/Stb/: CMakeLists.txt
Libs/TinyXML/: CMakeLists.txt
Libs/Vulkan/: CMakeLists.txt
Libs/ZLib/: CMakeLists.txt
Resources/: .gitignore  CMakeLists.txt  assets.xml
Resources/Levels/: level1.txt
Resources/Meshes/AnimatedCharacters2/: license.txt
Resources/Meshes/CutePropModels/: license.txt  plants01.tga
Resources/Shaders/: Default.metal  Default.vulkan  Level.metal  Level.vulkan  ShaderTypes.h  Skinning.metal  Skinning.vulkan
Resources/Textures/: dungeon.png.txt
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
Source/Engine/Core/: Engine.cpp  Engine.h  IGame.h
Source/Engine/Input/: InputManager.cpp  InputManager.h  Key.h
Source/Engine/Math/: Camera.cpp  Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Source/Engine/Mesh/: AnimatedMesh.cpp  AnimatedMesh.h  Material.cpp  Material.h  MaterialData.h  MeshData.h  StaticMesh.cpp  StaticMesh.h
Source/Engine/Platform/MacOS/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.mm  main.mm
Source/Engine/Renderer/: IPipelineState.h  IRenderBuffer.h  IRenderDevice.h  IShaderProgram.h  ITexture.h  ShaderCode.h  TextureData.h  VertexFormat.h
Source/Engine/Renderer/Metal/: MetalPipelineState.h  MetalPipelineState.mm  MetalRenderBuffer.h  MetalRenderBuffer.mm  MetalRenderDevice.h  MetalRenderDevice.mm  MetalShaderProgram.h  MetalShaderProgram.mm  MetalTexture.h  MetalTexture.mm
Source/Engine/Renderer/Vulkan/: VulkanCommon.cpp  VulkanCommon.h  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanRenderBuffer.cpp  VulkanRenderBuffer.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanTexture.cpp  VulkanTexture.h
Source/Engine/ResMgr/: ResourceManager.cpp  ResourceManager.h  Shader.h  Texture.h
Source/Game/: CMakeLists.txt  Game.cpp  Game.h  Level.cpp  Level.h
Source/Importer/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  LevelMeshBuilder.cpp  LevelMeshBuilder.h  LevelProcessor.cpp  LevelProcessor.h  MaterialProcessor.cpp  MaterialProcessor.h  MeshProcessor.cpp  MeshProcessor.h  ShaderProcessor.cpp  ShaderProcessor.h  TextureProcessor.cpp  TextureProcessor.h  Util.cpp  Util.h  main.cpp
Source/Platform/: CMakeLists.txt
Source/Platform/MacOS/: AppDelegate.mm  CMakeLists.txt  ViewController.h  ViewController.mm
Source/Platform/Win32/: CMakeLists.txt  Vulkan.cpp  Vulkan.h  Win32.h  main.cpp
